--- a/resources/selmer/mainpages/base.html
+++ b/resources/selmer/mainpages/base.html
@@ -33,7 +33,10 @@
 {% block foo %}
 {% endblock %}
 <footer>
-
+	<hr/>
+	<p>
+		Copyright &copy; 2014 PT. Zenius Education
+	</p>
 </footer>
 
 </script>
