--- a/resources/selmer/mainpages/base.html
+++ b/resources/selmer/mainpages/base.html
@@ -1,8 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
-	<link href="/assets/normalize.css" rel="stylesheet"/>
-	<link href="/assets/foundation.min.css" rel="stylesheet"/>
+	<meta charset="utf-8">
+
+	<!-- Always force latest IE rendering engine or request Chrome Frame -->
+	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+
+	<!-- Use title if it's in the page YAML frontmatter -->
+	<title>{{title}} - zenius league</title>
+
+	<!--foundation includes-->
+	<link rel="stylesheet" href="/assets/normalize.css">
+	<link rel="stylesheet" href="/assets/foundation.min.css">
 	<link href="/css/main-style.css" rel="stylesheet"/>
 	<meta charset="UTF-8"/>
 	<script type="text/javascript">
@@ -13,32 +22,53 @@
 			}
 		};
 	</script>
-	<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
-	<title>
-		{{title}}
-	</title>
+	<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
+
+	</script>
 
 </head>
-<body class="row">
-<header class="zpanel2">
-	<h1>
-		{{headline}}
-	</h1>
-	<h4 id="subtitle">
-	</h4>
-	{% for link in nav-links %}
-	<a href="{{link.url}}">{{link.title}}</a>
-	{% endfor %}
-</header>
-{% block foo %}
-{% endblock %}
-<footer>
-	<hr/>
-	<p>
-		Copyright &copy; 2014 PT. Zenius Education
-	</p>
-</footer>
 
-</script>
+<body class="index">
+<div class="sticky">
+	<nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large">
+		<ul class="title-area">
+			<li class="name">
+				<h1><a href="/">Zenius League</a></h1>
+			</li>
+		</ul>
+		<section class="top-bar-section">
+			<ul class="right">
+				{% for link in links %}
+				<li >
+					<a href="{{link.url}}">{{link.name}}</a>
+				</li>
+				{% endfor %}
+			</ul>
+		</section>
+	</nav>
+</div>
+<br>
+<div class="contents">
+	<div class="row">
+		<div class="columns large-12">
+			<div class="zpanel3">
+				<h5><i>"Never believe everything on the internet" </i> ~ Einstein</h5>
+
+			</div>
+		</div>
+	</div>
+
+</div>
+
+<div class="row">
+	{% block foo %}
+	{% endblock %}
+</div>
+<footer class="row footer">
+	<hr/>
+	<p class="right">© Copyright 2014 PT. Zenius Education. All Rights Reserved.</p>
+</footer>
+<script src="/assets/react.min.js"></script>
+<script src="/js/app.js"></script>
 </body>
 </html>
