--- a/resources/mockup-built/problems.html
+++ b/resources/mockup-built/problems.html
@@ -22,17 +22,9 @@
 <script src="/js/foundation/foundation.topbar.js"></script>
 <script src="/js/foundation/foundation.tooltip.js"></script>
 <script src="/js/foundation/foundation.tab.js"></script>
-<script src="/js/foundation/foundation.reveal.js"></script>
-<script src="/js/foundation/foundation.offcanvas.js"></script>
 <script src="/js/foundation/foundation.magellan.js"></script>
 <script src="/js/foundation/foundation.js"></script>
-<script src="/js/foundation/foundation.joyride.js"></script>
-<script src="/js/foundation/foundation.interchange.js"></script>
-<script src="/js/foundation/foundation.equalizer.js"></script>
 <script src="/js/foundation/foundation.dropdown.js"></script>
-<script src="/js/foundation/foundation.clearing.js"></script>
-<script src="/js/foundation/foundation.alert.js"></script>
-<script src="/js/foundation/foundation.abide.js"></script>
 
   </head>
   
@@ -51,7 +43,7 @@
                 <a href="#">Tutorial</a>
             </li>
             <li class="has-dropdown not-click">
-                <a href="/problems">Problems</a>
+                <a href="/problems.html">Problems</a>
                 <ul class="dropdown">
                       <li><a href="#">Problem 1 - The Multiples</a></li>
                       <li class="active"><a href="#">Problem 2 - The Multi-multiples</a></li>
@@ -65,10 +57,10 @@
                 <a href="#">Account</a>
             </li>           
             <li>
-                <a href="#">Sign-in</a>
+                <a href="/sign-in.html">Sign-in</a>
             </li>
             <li>
-                <a href="#">Sign-Up</a>
+                <a href="/sign-up.html">Sign-Up</a>
             </li>
             <li>
                 <a href="#">Sign-Out</a>
@@ -85,23 +77,123 @@
 
 <div class="row">
     <dl class="tabs" data-tab> 
-        <dd class="active"><a href="#panel1">Tab 1</a></dd> 
-        <dd><a href="#panel2">Tab 2</a></dd> 
-        <dd><a href="#panel3">Tab 3</a></dd> 
-        <dd><a href="#panel4">Tab 4</a></dd> 
+        <dd class="active"><a href="#panel1">1</a></dd> 
+        <dd><a href="#panel2">2</a></dd> 
+        <dd><a href="#panel3">3</a></dd> 
+        <dd><a href="#panel4">4</a></dd> 
     </dl> 
         <div class="tabs-content"> 
             <div class="content active" id="panel1"> 
-                <p>This is the first panel of the basic tab example. This is the first panel of the basic tab example.</p> 
+                <table> 
+                    <thead> 
+                        <tr> 
+                            <th>ID</th> 
+                            <th>Title</th> 
+                            <th>Solved By</th> 
+                        </tr> 
+                    </thead> 
+                    <tbody> 
+                        <tr> 
+                            <td>1</td> 
+                            <td>The Multiples</td> 
+                            <td>3123</td> 
+                        </tr> 
+                        <tr> 
+                            <td>2</td> 
+                            <td>The Multi-multiples</td> 
+                            <td>1231</td> 
+                        </tr> 
+                        <tr> 
+                            <td>3</td> 
+                            <td>The Square</td> 
+                            <td>2242</td> 
+                        </tr> 
+                    </tbody> 
+                </table>
             </div> 
             <div class="content" id="panel2"> 
-                <p>This is the second panel of the basic tab example. This is the second panel of the basic tab example.</p> 
+                <table> 
+                    <thead> 
+                        <tr> 
+                            <th>ID</th> 
+                            <th>Title</th> 
+                            <th>Solved By</th> 
+                        </tr> 
+                    </thead> 
+                    <tbody> 
+                        <tr> 
+                            <td>1</td> 
+                            <td>The Multiples</td> 
+                            <td>3123</td> 
+                        </tr> 
+                        <tr> 
+                            <td>2</td> 
+                            <td>The Multi-multiples</td> 
+                            <td>1231</td> 
+                        </tr> 
+                        <tr> 
+                            <td>3</td> 
+                            <td>The Square</td> 
+                            <td>2242</td> 
+                        </tr> 
+                    </tbody> 
+                </table>
             </div> 
             <div class="content" id="panel3"> 
-                <p>This is the third panel of the basic tab example. This is the third panel of the basic tab example.</p> 
+                <table> 
+                    <thead> 
+                        <tr> 
+                            <th>ID</th> 
+                            <th>Title</th> 
+                            <th>Solved By</th> 
+                        </tr> 
+                    </thead> 
+                    <tbody> 
+                        <tr> 
+                            <td>1</td> 
+                            <td>The Multiples</td> 
+                            <td>3123</td> 
+                        </tr> 
+                        <tr> 
+                            <td>2</td> 
+                            <td>The Multi-multipless</td> 
+                            <td>1231</td> 
+                        </tr> 
+                        <tr> 
+                            <td>3</td> 
+                            <td>The Square</td> 
+                            <td>2242</td> 
+                        </tr> 
+                    </tbody> 
+                </table>
             </div> 
             <div class="content" id="panel4"> 
-                <p>This is the fourth panel of the basic tab example. This is the fourth panel of the basic tab example.</p> 
+                <table> 
+                    <thead> 
+                        <tr> 
+                            <th>ID</th> 
+                            <th>Title</th> 
+                            <th>Solved By</th> 
+                        </tr> 
+                    </thead> 
+                    <tbody> 
+                        <tr> 
+                            <td>1</td> 
+                            <td>The Multiples</td> 
+                            <td>3123</td> 
+                        </tr> 
+                        <tr> 
+                            <td>2</td> 
+                            <td>The Multi-multiples</td> 
+                            <td>1231</td> 
+                        </tr> 
+                        <tr> 
+                            <td>3</td> 
+                            <td>The Square</td> 
+                            <td>2242</td> 
+                        </tr> 
+                    </tbody> 
+                </table>
             </div> 
         </div>
 </div>
