--- a/resources/mockup-separated/index.html
+++ b/resources/mockup-separated/index.html
@@ -1,7 +1,10 @@
+---
+title: Home
+---
 <div class="row">
     <div class="columns large-12">
         <div class="panel">
-            <h1 style="color:#008cba">Zenius League</h1>
+            <h1 class="zcolor">Zenius League</h1>
             <p><b>Mainan buat otak lo.</b></p>
         </div>        
     </div>    
