--- a/resources/mockup-separated/problems.html
+++ b/resources/mockup-separated/problems.html
@@ -1,26 +1,129 @@
+---
+title: Problems
+---
 <div class="row">
     <h1>Problems</h1>
 </div>
 
 <div class="row">
     <dl class="tabs" data-tab> 
-        <dd class="active"><a href="#panel1">Tab 1</a></dd> 
-        <dd><a href="#panel2">Tab 2</a></dd> 
-        <dd><a href="#panel3">Tab 3</a></dd> 
-        <dd><a href="#panel4">Tab 4</a></dd> 
+        <dd class="active"><a href="#panel1">1</a></dd> 
+        <dd><a href="#panel2">2</a></dd> 
+        <dd><a href="#panel3">3</a></dd> 
+        <dd><a href="#panel4">4</a></dd> 
     </dl> 
         <div class="tabs-content"> 
             <div class="content active" id="panel1"> 
-                <p>This is the first panel of the basic tab example. This is the first panel of the basic tab example.</p> 
+                <table> 
+                    <thead> 
+                        <tr> 
+                            <th>ID</th> 
+                            <th>Title</th> 
+                            <th>Solved By</th> 
+                        </tr> 
+                    </thead> 
+                    <tbody> 
+                        <tr> 
+                            <td>1</td> 
+                            <td>The Multiples</td> 
+                            <td>3123</td> 
+                        </tr> 
+                        <tr> 
+                            <td>2</td> 
+                            <td>The Multi-multiples</td> 
+                            <td>1231</td> 
+                        </tr> 
+                        <tr> 
+                            <td>3</td> 
+                            <td>The Square</td> 
+                            <td>2242</td> 
+                        </tr> 
+                    </tbody> 
+                </table>
             </div> 
             <div class="content" id="panel2"> 
-                <p>This is the second panel of the basic tab example. This is the second panel of the basic tab example.</p> 
+                <table> 
+                    <thead> 
+                        <tr> 
+                            <th>ID</th> 
+                            <th>Title</th> 
+                            <th>Solved By</th> 
+                        </tr> 
+                    </thead> 
+                    <tbody> 
+                        <tr> 
+                            <td>1</td> 
+                            <td>The Multiples</td> 
+                            <td>3123</td> 
+                        </tr> 
+                        <tr> 
+                            <td>2</td> 
+                            <td>The Multi-multiples</td> 
+                            <td>1231</td> 
+                        </tr> 
+                        <tr> 
+                            <td>3</td> 
+                            <td>The Square</td> 
+                            <td>2242</td> 
+                        </tr> 
+                    </tbody> 
+                </table>
             </div> 
             <div class="content" id="panel3"> 
-                <p>This is the third panel of the basic tab example. This is the third panel of the basic tab example.</p> 
+                <table> 
+                    <thead> 
+                        <tr> 
+                            <th>ID</th> 
+                            <th>Title</th> 
+                            <th>Solved By</th> 
+                        </tr> 
+                    </thead> 
+                    <tbody> 
+                        <tr> 
+                            <td>1</td> 
+                            <td>The Multiples</td> 
+                            <td>3123</td> 
+                        </tr> 
+                        <tr> 
+                            <td>2</td> 
+                            <td>The Multi-multipless</td> 
+                            <td>1231</td> 
+                        </tr> 
+                        <tr> 
+                            <td>3</td> 
+                            <td>The Square</td> 
+                            <td>2242</td> 
+                        </tr> 
+                    </tbody> 
+                </table>
             </div> 
             <div class="content" id="panel4"> 
-                <p>This is the fourth panel of the basic tab example. This is the fourth panel of the basic tab example.</p> 
+                <table> 
+                    <thead> 
+                        <tr> 
+                            <th>ID</th> 
+                            <th>Title</th> 
+                            <th>Solved By</th> 
+                        </tr> 
+                    </thead> 
+                    <tbody> 
+                        <tr> 
+                            <td>1</td> 
+                            <td>The Multiples</td> 
+                            <td>3123</td> 
+                        </tr> 
+                        <tr> 
+                            <td>2</td> 
+                            <td>The Multi-multiples</td> 
+                            <td>1231</td> 
+                        </tr> 
+                        <tr> 
+                            <td>3</td> 
+                            <td>The Square</td> 
+                            <td>2242</td> 
+                        </tr> 
+                    </tbody> 
+                </table>
             </div> 
         </div>
 </div>
