--- a/resources/mockup-separated/header.html
+++ b/resources/mockup-separated/header.html
@@ -12,7 +12,7 @@
                 <a href="#">Tutorial</a>
             </li>
             <li class="has-dropdown not-click">
-                <a href="/problems">Problems</a>
+                <a href="/problems.html">Problems</a>
                 <ul class="dropdown">
                       <li><a href="#">Problem 1 - The Multiples</a></li>
                       <li class="active"><a href="#">Problem 2 - The Multi-multiples</a></li>
@@ -26,10 +26,10 @@
                 <a href="#">Account</a>
             </li>           
             <li>
-                <a href="#">Sign-in</a>
+                <a href="/sign-in.html">Sign-in</a>
             </li>
             <li>
-                <a href="#">Sign-Up</a>
+                <a href="/sign-up.html">Sign-Up</a>
             </li>
             <li>
                 <a href="#">Sign-Out</a>
