--- a/resources/selmer/mainpages/base.html
+++ b/resources/selmer/mainpages/base.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body class="index">
+<body id="body" class="{{page}}">
 <div class="sticky">
 	<nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large">
 		<ul class="title-area">
