--- a/resources/selmer/mainpages/base.html
+++ b/resources/selmer/mainpages/base.html
@@ -52,7 +52,8 @@
 	<div class="row">
 		<div class="columns large-12">
 			<div class="zpanel3">
-				<h5><i>"Never believe everything on the internet" </i> ~ Einstein</h5>
+				<h5>This site is in alpha version, expect some rough edges</h5>
+				<quote><i>"Don't believe everything you read on the internet" </i> ~ Einstein</quote>
 
 			</div>
 		</div>
@@ -66,7 +67,7 @@
 </div>
 <footer class="row footer">
 	<hr/>
-	<p class="right">© Copyright 2014 PT. Zenius Education. All Rights Reserved.</p>
+	<p class="right">© 2014 PT. Zenius Education. All Rights Reserved.</p>
 </footer>
 <script src="/assets/react.min.js"></script>
 <script src="/js/app.js"></script>
