--- a/resources/selmer/mainpages/signup.html
+++ b/resources/selmer/mainpages/signup.html
@@ -3,6 +3,6 @@
 <br/><br/><br/>
 <div id="message-holder" class="medium-6 medium-centered columns"></div>
 <br/>
-<div id="login-form" class="medium-4 medium-centered columns" >
+<div id="signup-form" class="medium-6 medium-centered columns">
 </div>
 {% endblock %}
