--- a/resources/selmer/mainpages/login.html
+++ b/resources/selmer/mainpages/login.html
@@ -1,8 +1,10 @@
 {% extends "selmer/mainpages/base.html" %}
 {% block foo %}
 <br/><br/><br/>
-<div id="message-holder" class="medium-6 medium-centered columns"></div>
-<br/>
-<div id="login-form" class="medium-4 medium-centered columns" >
+<div id="main-login" class="medium-8 medium-centered columns">
+	<div id="message-holder" class="medium-9 medium-centered columns"></div>
+	<br/>
+	<div id="login-form" class="medium-6 medium-centered columns">
+	</div>
 </div>
 {% endblock %}
