--- a/resources/selmer/mainpages/signup.html
+++ b/resources/selmer/mainpages/signup.html
@@ -1,8 +1,8 @@
 {% extends "selmer/mainpages/base.html" %}
 {% block foo %}
 <br/><br/><br/>
-<div id="message-holder" class="medium-6 medium-centered columns"></div>
-<br/>
-<div id="signup-form" class="medium-6 medium-centered columns">
+<div id="main-signup" class="medium-8 medium-centered columns">
+	<div id="signup-form" class="medium-10 medium-centered columns">
+	</div>
 </div>
 {% endblock %}
