first version completed

--- a/resources/selmer/mainpages/course.html
+++ b/resources/selmer/mainpages/course.html
@@ -2,7 +2,7 @@
 {% block foo %}
 <br/>
 <div id="tutorials" class="medium-12 columns">
-	<h4>{{course.title}}</h4>
+	<h4><a href="/tutorials">All courses</a> -> {{course.title}}</h4>
 	<hr/>
 	<div id="side-tutorials" class="medium-3 columns panel callout">
 		<ol>
