updates new problems

--- a/resources/problem/001.html
+++ b/resources/problem/001.html
@@ -1,9 +1,9 @@
-<h3>
-	Soal seru pertama
-</h3>
-		<p>
-			Apakah ini??
-<h3>
-	$$ \int_a^b x^4 + x^3 dx = $$
-</h3>
-		</p>
+<h5>
+	Coba jawab pertanyaan cupu yang satu ini, untuk ngetest kalo sistem udah jalan
+</h5>
+<p>
+<h5>
+	Jika $ U_n = n $ dan $ S_n $ menyatakan $ \sum\limits_{k=1}^n U_k $
+	maka $ S_{100} = ? $
+</h5>
+</p>
