--- a/resources/tutorials/tutorial/001.html
+++ b/resources/tutorials/tutorial/001.html
@@ -1,10 +1,51 @@
-<p>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur expedita, nulla! Accusamus accusantium aliquid animi asperiores aspernatur beatae dolor doloribus ducimus expedita facilis harum id illum iusto laboriosam molestiae nemo nobis nostrum obcaecati officiis pariatur, placeat quaerat quas qui quod reiciendis reprehenderit repudiandae soluta! Blanditiis, deserunt, dolore eaque earum eligendi et eum in itaque modi nam quibusdam quidem saepe sapiente vero voluptate? Ad, aliquam atque cupiditate eaque excepturi libero minima minus molestias non quidem quisquam repellat soluta suscipit tempora veritatis vitae voluptates voluptatum. Aspernatur commodi cum deleniti dicta doloribus ex illo iste laudantium modi, molestiae necessitatibus nesciunt nihil nobis numquam odio placeat quis sequi, tenetur veniam voluptas! Aliquam assumenda at placeat sint temporibus tenetur. Atque cupiditate doloribus ducimus eaque odit quidem soluta tempore voluptatibus. Alias aliquam laborum perferendis, quis rerum sit temporibus. Accusantium alias commodi iure molestiae, pariatur praesentium recusandae ullam vel voluptatibus voluptatum! Culpa doloremque id libero magni odio omnis quibusdam rerum sit. Alias aliquid aut doloribus esse fugit nulla odio quibusdam reiciendis rem repellat. Ab accusamus alias asperiores aspernatur atque blanditiis debitis dolores ex hic id libero maxime minus nemo nulla odit officia omnis optio praesentium, qui quo reiciendis sed sequi temporibus unde ut vitae voluptatem. Deserunt, natus?
-</p>
-		<strong>
-			Well this is strong enough
-		</strong>
-<br/>
-		<p>
-			Another Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, aliquam commodi consequatur dignissimos dolores ea exercitationem harum in itaque labore libero mollitia numquam, obcaecati odio perspiciatis quae quaerat quo saepe sed sint sit soluta totam ut vitae voluptatum! Accusamus accusantium aperiam autem consequuntur culpa delectus eligendi facere fugit harum illum inventore iure laborum laudantium magnam numquam officia officiis quae quia quis ratione reprehenderit saepe sapiente sed soluta totam vel veritatis, vero. Aliquam commodi earum, fugit libero modi saepe totam voluptatibus! Accusamus eligendi incidunt itaque minima molestiae mollitia nulla quae quam velit. At blanditiis consequatur expedita fuga maxime obcaecati repudiandae sint.
-		</p>
+<article>
+	<p>
+		Step by step instruction to install Haskell:
+	</p>
+	<ol>
+		<li>
+			Install Haskell platform from <a href="http://www.haskell.org/platform/">This site</a>
+		</li>
+		<li>
+			Download Heat from <a href="http://www.cs.kent.ac.uk/projects/heat/">This site</a>
+		</li>
+		<li>
+			Install haskell platform according to your operating system, and remember where you install them
+		</li>
+		<li>
+			If you don't have java installed, install java
+		</li>
+		<li>
+			Put your heat.jar in a friendly folder and create a shortcut for easy access to heat
+		</li>
+		<li>
+			Double click the heat.jar file
+		</li>
+		<li>
+			You will be asked at setup to connect heat with your haskell, click browse and find the haskell folder, once
+			in there goto bin folder and select ghci.exe
+		</li>
+		<li>
+			If you're not asked to connect haskell with heat, then choose from heat menu program-option and follow the
+			step 7
+		</li>
+		<li>
+			Successful installation will produce a prelude> prompt in heat where you can do things in haskell
+		</li>
+		<li>
+			For mac users, highly recommended to update to yosemite or at least mavericks
+		</li>
+		<li>
+			And then install JDK from
+			<a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html">
+				this site
+			</a>
+		</li>
+		<li>
+			When installing jdk, make sure you choose the right platoform (Mac)
+		</li>
+		<li>
+			For mac users, the location of haskell platoform is usually at /usr/bin/ghci, needed when setting up HEAT
+		</li>
+	</ol>
+</article>
