--- a/resources/problem/016.html
+++ b/resources/problem/016.html
@@ -3,7 +3,7 @@
 	Dari titik-titik berikut ini: <br/><br/>
 	[[3,9],[5,15],[2,5],[-1,5],[-2,2],[5,7],[9,21],[8,19],[-5,-12],[4,9],[6,12],[7,15],[-7,-19],[-9,-18],[11,21],[12,32],[15,130],[21,45],[-19,-15],[-10,17],[-7,-10]]
 	<br/><br/>
-	Manakah yang berada pada kurva garis $ y = 2x + 3 $
+	Manakah yang berada pada garis $ y = 2x + 3 $
 	<br/><br/>
 	Note : Jawaban dalam bentuk list of points.
 	Contoh : [[2,3],[3,4]] bukan [2,3] [3,4]
