fixed problems and fixed login issue

--- a/resources/problem/009.html
+++ b/resources/problem/009.html
@@ -1,4 +1,4 @@
 <h5>
-	Berapakah jumlah semua x yang memenuhi persamaan
-	$$ |x-1| + |x-2| + |x-3| + ... + |x-100| = 0 $$
+	Berapakah jumlah semua $ x_i $ yang memenuhi persamaan
+	$$ |x_1 -1| + |x_2 -2| + |x_3 - 3| + ... + |x_{100} -100| = 0 $$
 </h5>
