--- a/resources/selmer/mainpages/courses.html
+++ b/resources/selmer/mainpages/courses.html
@@ -9,7 +9,12 @@
 		<h3><a href="{{course.link}}">{{course.title}}</a></h3>
 		<p>{{course.description}}</p>
 	</div>
-	<br/>
+	<div class="medium-11 columns">
+
+	</div>
+	<div class="medium-12 columns">
+		<br/>
+	</div>
 	{% endfor %}
 </div>
 {% endblock %}
