--- a/resources/selmer/mainpages/home.html
+++ b/resources/selmer/mainpages/home.html
@@ -2,7 +2,121 @@
 
 {% block foo %}
 <div class="large-12 columns">
+	<br/><br/>
+	<h4>
+		Gue ngerasa udah nguasain konsep, tapi kalo ngeliat soal tipe SBMPTN atau soal zenius kok masih suka nggak
+		kebayang	mesti	diapain	ya?
+	</h4>
+	<p>
+		Berdasarkan pengalaman zenius selama 10 tahun terakhir, emang banyak kok yang ngerasa kayak gini. Likely
+		causes karena sebenernya elo belom bener2x ngerti konsep, atau belom mengeksplorasi konsep itu secara
+		mendalam, atau belom bisa konek-in kemana konsep-konsep itu nyambung sama konsep-konsep lainnya. Untuk bikin
+		drill Deliberate Practice untuk masalah di atas, itulah gunanya kita bikin site ini, tujuan utamanya
+		ngembangin kemampuan problem-solving elo dengan cara memaksa elo untuk memformulasikan masalah dalam bentuk
+		yang segamblang mungkin.
+	</p>
+	<h4>
+		What is zenius league?
+	</h4>
+	<p>
+		Zenius league, niatnya untuk jadi tempat Deliberate Practice untuk belajar fundamentals of Thinking, Logic,
+		Mathematics, and Mathematical modelling for the natural & social sciences. Di sini ada dua bagian utama,
+		bagian tutorials isinya videos/articles/exercises dasar untuk bagian belajarnya, dan bagian kedua bagian
+		problems yang isinya soal-soal gokil yang nyambung sama materi SBMPTN (dari dasar-2x level TKPA, sampe ke
+		mat/fis/kim/bio/ekon).
+	</p>
+	<h4>
+		How is it different from the general "soal2x" di zenius.net?
+	</h4>
+	<p>
+		In time, site ini bakal jadi bagian dari zenius.net. Sementara ini terpisah dulu untuk alpha-version testing.
+		Beda yang signifikan adalah, soal-soal di zenius league didesain untuk penguasaan konsep-konsep lewat the use
+		of programming.
+	</p>
+	<h4>
+		Jadi gue bakal belajar programming di sini?
+	</h4>
+	<p>
+		Yes, and no. Yes, karena iya elo bakal belajar tentang beberapa programming languages, dan the basic concept
+		of programming. No, karena bukan itu fokus dari zenius league, kita nggak ngajarin programming supaya elo
+		jadi programmer, kita ngajarin programming sebagai tools yang SEHARUSNYA dipelajarin oleh semua orang
+		terlepas dia mau jadi programmer apa nggak.
+	</p>
+	<h4>
+		So, you're saying everyone should learn how to program?
+	</h4>
+	<p>
+		Yup. Dari dulu zenius percaya bahwa programming makes us think better, dan problem solving soal2x SBMPTN
+		lewat coding makes sure elo bener2x ngerti konsep2x secara mendalam, dan problem-solving lewat programming itu
+		cara paling enak dan seru untuk ngembangin kreativitas dalam memecahkan masalah.
+	</p>
+	<h4>
+		Elo yakin programming penting dan ngaruh buat gue ber SBMPTN?
+	</h4>
+	<p>
+		Tonton ini dulu lah:
+		<br/><br/>
 
+	<div class="medium-8 medium-centered columns">
+		<iframe width="560" height="315
+				" src="//www.youtube.com/embed/nKIu9yen5nc"
+				frameborder="0"
+				allowfullscreen></iframe>
+	</div>
+		<br/><br/>
+
+	<div class="medium-8 medium-centered columns">
+		<iframe width="560" height="315"
+				src="//www.youtube.com/embed/Ia55clAtdMs"
+				frameborder="0"
+				allowfullscreen></iframe>
+	</div>
+	</p>
+	<h4>
+		Elo belom jawab pertanyaan gue, beneran ngaruh nggak buat SBMPTN? Jangan-jangan cuma buang waktu doang?
+	</h4>
+	<p>
+		Mungkin aja sih nggak ngaruh, so far gue cuma bisa bilang kalo gue yakin banget ini ngaruh banget, karena ini
+		emang belom ada research seriusnya. Yang pasti sih, belajar dasar2x programming untuk bisa ngerjain soal di
+		sini paling cuma butuh waktu 1-2 minggu. Murid2x kita di kelas sih 2 hari juga udah bisa ngerjain soal-soal
+		aneh2x, jadi nggak buang banyak waktu juga.
+	</p>
+	<h4>
+		Coba jelasin deh lebih detail kenapa programming bisa bantu bikin IQ meningkat, ningkatin kecerdasan, dan
+		ngebantu gue nguasain konsep SBMPTN?
+	</h4>
+	<p>
+		Wow, what an ambitious question you have there :) Well so far dari pengalaman kita, hal yang paling bikin
+		cerdas adalah kemampuan berpikir lebih rasional/logical terutama kemampuan berpikir dalam model matematis.
+		Terus cara terbaiknya adalah ngajarin orang tentang materi yang lagi elo pelajarin, karena itu makin
+		memastikan kalo elo nguasain konsep makin mateng. Nah bikin solusi di programming itu kayak ngajarin orang
+		dodol, elo bisa anggep komputer tuh dodol banget (tapi jago banget ngitung, akurasi 100% dan kenceng). Jadi
+		pas elo bikin codes, elo mesti definisiin step-step untuk solving the problem itu sejelas mungkin, in turn elo
+		jadi bener-bener ngerti untuk mecahin masalah tersebut langkah-langkah apa yang mesti dilakuin. So, coding
+		bikin elo terbiasa bikin solusi masalah secara gamblang dan nemuin solusi yang kreatif, bukan sekedar ngafal
+		cara.
+	</p>
+	<h4>
+		Terus gimana gue bisa mulai dan coba2x dulu?
+	</h4>
+	<p>
+		Elo sign-up aja dulu, terus liat soal2xnya. Nanti elo tentuin sendiri dari soal-soalnya kira2x bisa ngaruh
+		untuk bikin elo mikir lebih dashyat nggak :)
+	</p>
+	<h4>
+		Terus kalo mau ngupgrade memori macbook gue, harganya berapa?
+	</h4>
+	<p>
+		Well, mungkin lebih tepat kalo elo ke Ambas, Mangga Dua, BTC, atau mall komputer lain yang ada di kota lo dan
+		tanya sama mas-mas/mbak-mbak yang ada di sana.
+	</p>
+	<h4>
+		Eh terus kalo gue mau beli mouse gimana?
+	</h4>
+	<p>
+		Dude, seriously we're <a href="http://zenius.net" target="_blank">zenius.net</a> not <a
+		target="_blank"	href="http://www.geniusnet.com/Genius/wSite/np?ctNode=97&mp=1">geniusnet</a>.
+	</p>
 </div>
 <div id="main">
 
