--- a/resources/problem/031.html
+++ b/resources/problem/031.html
@@ -1,3 +1,9 @@
 <h5>
-
+	Jika kita menuliskan bilangan dari 1 sampai 20 secara berurutan kita akan mendapatkan digits sebagai berikut:
+	<br/><br/>
+	1 2 3 4 5 6 7 8 9 1 0 1 1 1 2 1 3 1 4 1 5 1 6 1 7 1 8 1 9 2 0
+	<br/><br/>
+	Jika d(n) menyatakan suku ke n dari barisan ini, maka barisan di atas memiliki d(20) = 1 dan d(21) = 5.
+	<br/><br/>
+	Ada berapa angka/digit kah yang kita tuliskan saat menulis bilangan 1 sampai 1,234,567 (inclusive)?
 </h5>
