--- a/resources/soalsumbangan/pantulan.html
+++ b/resources/soalsumbangan/pantulan.html
@@ -1,3 +1,9 @@
 <h5>
    Pantulan
 </h5>
+<div><img src="https://www.dropbox.com/s/r0eh1ts66wuk05x/tumbukan1.png?dl=0"></div>
+<div>
+   Sebuah benda jatuh bebas dari ketinggian 40 meter di atas lantai seperti pada gambar. 
+   Tumbukan pada lantai menyebabkan benda memantul dengan laju pantulan menjadi 4/5 kali laju sesaat sebelum terpantul. 
+   Hitung jarak tempuh benda sampai sesaat sebelum pantulan ke 10 ! (Hasil dibulatkan sampai satuan terdekat).
+</div>
