--- a/resources/soalsumbangan/pantulan.html
+++ b/resources/soalsumbangan/pantulan.html
@@ -1,9 +1,11 @@
 <h5>
    Pantulan
 </h5>
-<div><img src="https://www.dropbox.com/s/r0eh1ts66wuk05x/tumbukan1.png?dl=0"></div>
-<div>
-   Sebuah benda jatuh bebas dari ketinggian 40 meter di atas lantai seperti pada gambar. 
-   Tumbukan pada lantai menyebabkan benda memantul dengan laju pantulan menjadi 4/5 kali laju sesaat sebelum terpantul. 
+<div><img src="http://s26.postimg.org/qkoisue51/tumbukan1.png"></div>
+<h5>
+   Sebuah benda jatuh bebas dari ketinggian 40 meter di atas lantai seperti pada gambar.
+   <br/>
+   Tumbukan pada lantai menyebabkan benda memantul dengan laju pantulan menjadi 4/5 kali laju sesaat sebelum terpantul.
+   <br/><br/>
    Hitung jarak tempuh benda sampai sesaat sebelum pantulan ke 10 ! (Hasil dibulatkan sampai satuan terdekat).
-</div>
+</h5>
