fixed semantical error

--- a/resources/problem/044.html
+++ b/resources/problem/044.html
@@ -1,3 +1,3 @@
 <h5>
-	Berapakah luas area yang dibatasi oleh grafik $ y = 2x + 50 $ , garis $ x = 0 $ , garis $ x = 80 $, dan sumbu x?
+	Berapakah luas daerah yang dibatasi oleh grafik $ y = 2x + 50 $ , garis $ x = 0 $ , garis $ x = 80 $, dan sumbu x?
 </h5>
