--- a/resources/problem/005.html
+++ b/resources/problem/005.html
@@ -9,7 +9,7 @@
 			$ f(2) = 1 $
 		</li>
 		<li>
-			$ f(n) = f (n-1) + f (n-2) $
+			$ f(n) = f (n-1) + f (n-2) $ untuk n > 2
 		</li>
 	</ul>
 	Berapakah nilai dari f(30) ?
