--- a/resources/problem/045.html
+++ b/resources/problem/045.html
@@ -16,4 +16,7 @@
 	</ul>
 	Berapakah luas daerah yang dibatasi oleh kurva $ y = (fl(x))^2 + fl(x) $ , garis $ x = 0 $, garis $ x = 50 $, dan
 	sumbu x?
+	<br/>
+	<br/>
+	Hint: berarti grafiknya antara $ 0 \leq x \leq 50 $
 </h5>
